# discord-data-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: ARCHITECTURE_SUGGESTION.md
src/: analyzer.rs  app.rs  app_state.rs  config.rs  downloader.rs  input.rs  main.rs  support_activity.rs  ui.rs
src/analyzer/: mod.rs  report.rs  structs.rs  workers.rs
src/app/: events.rs  mod.rs  state.rs
src/data/: activity.rs  messages.rs  mod.rs  support.rs  utils.rs
src/downloader/: hash.rs  mod.rs  worker.rs
src/input/: mod.rs
src/input/handlers/: activity.rs  analyzing.rs  channel_list.rs  gallery.rs  home.rs  messages.rs  mod.rs  overview.rs  settings.rs  setup.rs  support.rs
src/ui/: components.rs  mod.rs  render.rs
src/ui/screens/: activity.rs  analyzing.rs  channel_list.rs  download.rs  gallery.rs  home.rs  messages.rs  mod.rs  overview.rs  settings.rs  setup.rs  support.rs
