[package]
name = "discord-data-analyzer-rs"
version = "0.1.2"
edition = "2024"
description = "Discord Data Analyzer in Rust"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
emojis = "0.6"
regex = "1.11"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.12"
walkdir = "2.5"
toml = "1.0.3"
ureq = "3.2.0"
sha2 = "0.10"

[[bin]]
name = "discord-analyzer"
path = "src/main.rs"
